# ghidra-mcp-lite

./: LICENSE  README.md  pyproject.toml
src/ghidra_mcp/: __main__.py  context.py  models.py  server.py  tools.py
