[project]
name = "ghidra-mcp-lite"
version = "0.1.0"
description = "Lightweight native Ghidra MCP server — no ChromaDB, no ML/embedding"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "mcp[cli]>=1.9.4",
    "pyghidra>=2.2.1",
    "ghidrecomp>=0.5.8",
]

[project.scripts]
ghidra-mcp = "ghidra_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ghidra_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 100
